Fix stretched logo problem on larger devices

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-html, body {width: auto!important; overflow-x: hidden!important} 
+html, body {width: auto!important; overflow-x: hidden!important}
 
 @media screen and (max-width: 480px) {
   .logo{
@@ -14,10 +14,10 @@ html, body {width: auto!important; overflow-x: hidden!important}
 }
  @media screen and (min-width: 480px) {
   .logo{
-    width: 25%;
+    width: 15%;
     height: 125px;
-    margin-left: 35%;
-    margin-right: 40%;
+    margin-left: 42.5%;
+    margin-right: 42.5%;
   }
 }
 
